# ChargingParkPlacement

./: .gitignore  CMakeLists.txt  LICENSE  README.md
analysis/: coverage_quality.ipynb  turning_points.cpp
data/: ionity_charger.csv  tesla_supercharger.csv
data/europe/: europe_arcs.csv  europe_nodes.csv
data/europe/park_extending_covers/: 150.csv  150_ionity.csv  150_tesla.csv  250.csv  250_ionity.csv  250_tesla.csv  400.csv  400_ionity.csv  50.csv  50_ionity.csv  50_tesla.csv  600.csv  600_ionity.csv  600_tesla.csv
data/germany/: germany_arcs.csv  germany_nodes.csv
data/germany/park_extending_covers/: 150.csv  150_ionity.csv  150_tesla.csv  250.csv  250_ionity.csv  250_tesla.csv  400.csv  400_ionity.csv  400_tesla.csv  50.csv  50_ionity.csv  50_tesla.csv  600.csv  600_ionity.csv  600_tesla.csv
data/spain/: spain_arcs.csv  spain_nodes.csv
data/spain/park_extending_covers/: 150.csv  150_ionity.csv  150_tesla.csv  250.csv  250_ionity.csv  250_tesla.csv  400.csv  400_ionity.csv  400_tesla.csv  50.csv  50_ionity.csv  50_tesla.csv  600.csv  600_ionity.csv  600_tesla.csv
include/: park_extending.hpp  park_placing.hpp  peak_node_mapping.hpp  pruning.hpp  stringutil.h
src/: main.cpp
